--- a/ExcelAPPWeb/asserts/css/login.css
+++ b/ExcelAPPWeb/asserts/css/login.css
@@ -74,8 +74,8 @@ h1, h2, h3, h4, h5, h6 {
 
 /*login 开始*/
 .login{
-    margin-top:30px;
-    /*width: 1000px;*/
+    /*margin-top:30px;*/
+    width: 1000px;
     /*margin: 0 auto;
     margin-top: 35px;*/
     /*height: 500px;
@@ -98,11 +98,10 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing:5px
 }
 .login>.login_main{
-    /*width: 1000px;
-    height: 320px;*/
+    width: 1000px;
+    height: 320px;
 }
 .login>.login_main>.main_left{
-    display:none;
     height: 320px;
     width: 650px;
     float: left;
@@ -112,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 320px;
     width: 350px;
     margin:0 auto;
-    /*float: right;*/
+    float: right;
     background-color: #e9eef2;
 }
 .login>.login_main>.main_right>.right_title{
